2006-05-16  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Memory leaks in hn_wm_watchable_app_new()" (Closes
	N#29530)
	* hildon-navigator/hn-wm-watchable-app.c: do not duplicate strings
	  contained in the watchable app structure.

2006-05-15  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: Open the help in a dialog (Closes N#29447)

2006-05-15  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "home applet corners are not shown round as they should"
	(Closes N#28838)
	* hildon-home/layout-manager.c: Hide the applet eventbox windows
	  when not in layout mode to make shape masks work again

2006-05-15  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "AF-BAT: Cancelled background image visible beneath the
	current background" (Closes N#27444)
	* hildon-home/hildon-home-main.c:
	  - create_background_preview(): Added new function to create background
	    preview and save it as a background if no preview is needed
	  - set_background_response_handler(): Update to use new function
	  - set_background_dialog_selected(): Update to use new function
	  - show_loading_image_note(): Update preview flag
	  - image_loader_callback(): Update to save preview if saving
	    picture as background and no cancel button is pressed
	  - construct_background_image_with_uri(): Changed to always

2006-05-12  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.16

2006-05-12  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: Applied refactoring of the
	  overlap indication, now based on screenshots of the applets
	  (Closes N#24727 and N#28928)
	* hildon-home/layout-manager.c, hildon-home/home-applet-handler.c,
	  hildon-home/applet-manager.c: (Closes N#27832)
	  - make the home-applet-handler responsible for freeing the
	    applet's desktop filename and library filename
	  - fixed a possible crash in applet_manager_load_all, where
	    a list was being modified while being iterated